<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/padding_margin_xxxlarge">

            <ImageView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_xlarge"
                android:hint="@string/fill_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phones_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_xlarge"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwords_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginTop="@dimen/padding_margin_xlarge"
                android:backgroundTint="@color/color_surface"
                android:text="@string/login"
                android:textColor="@color/color_on_surface"
                app:layout_constraintEnd_toStartOf="@+id/register_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registers_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/auth_button_height"
                android:layout_marginStart="@dimen/padding_margin_xlarge"
                android:backgroundTint="@color/teal_100"
                android:text="Регистрация"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/login_btn"
                app:layout_constraintTop_toTopOf="@id/login_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_progress_bar_cover"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:translationZ="90dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>